--- a/src/main/resources/templates/sanpham.html
+++ b/src/main/resources/templates/sanpham.html
@@ -32,7 +32,7 @@
                     <div class="title" data-toggle="collapse" href="#brand-collapse" role="button" aria-expanded="false"
                          aria-controls="brand-collapse">
                         <div class="text">Thương hiệu</div>
-                        <i class="fas fa-chevron-up"></i>
+                        <i class="zmdi zmdi-chevron-up"></i>
                     </div>
                     <div class="select-filter collapse show" id="brand-collapse">
                         <th:block th:each="brand : ${brands}">
@@ -58,7 +58,7 @@
                     <div class="title" data-toggle="collapse" href="#categories-collapse" role="button"
                          aria-expanded="false" aria-controls="categories-collapse">
                         <div class="text">Danh mục</div>
-                        <i class="fas fa-chevron-up"></i>
+                        <i class="zmdi zmdi-chevron-up"></i>
                     </div>
                     <div class="select-filter collapse show" id="categories-collapse">
                         <th:block th:each="category : ${categories}">
@@ -85,7 +85,7 @@
                     <div class="title" data-toggle="collapse" href="#size-collapse" role="button" aria-expanded="false"
                          aria-controls="size-collapse">
                         <div class="text">Size</div>
-                        <i class="fas fa-chevron-up"></i>
+                        <i class="zmdi zmdi-chevron-up"></i>
                     </div>
                     <div class="select-filter collapse show" id="size-collapse">
                         <th:block th:each="size : ${sizeVn}">
