--- a/src/main/resources/templates/layout/_menu.html
+++ b/src/main/resources/templates/layout/_menu.html
@@ -1,148 +1,145 @@
 <header class="header-area header-default sticky-header" xmlns:th="http://www.thymeleaf.org">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-6 col-sm-4 col-lg-3">
-                <div class="header-logo-area">
+	<div class="container">
+		<div class="row align-items-center">
+			<div class="col-6 col-sm-4 col-lg-3">
+				<div class="header-logo-area">
 
-                    <a th:href="@{/}">
-                        <p style="font-weight: bold; font-size: x-large;">GOTD</p>
+					<a th:href="@{/}">
+						<p style="font-weight: bold; font-size: larger;">GOTD</p>
 
-                    </a>
-                </div>
-            </div>
-            <div class="col-sm-4 col-lg-7 d-none d-lg-block">
-                <div class="header-navigation-area">
-                    <ul class="main-menu nav position-relative">
-                        <li>
-                            <a href="/">Trang chủ</a>
-                        </li>
-                        <li>
-                            <a href="sanpham">Sản phẩm</a>
-                        </li>
+					</a>
+				</div>
+			</div>
+			<div class="col-sm-4 col-lg-7 d-none d-lg-block">
+				<div class="header-navigation-area">
+					<ul class="main-menu nav position-relative">
+						<li>
+							<a href="/">Trang chủ</a>
+						</li>
+						<li>
+							<a href="sanpham">Sản phẩm</a>
+						</li>
+						<li>
+							<a href="favorites">Yêu Thích</a>
 
-                        <li>
-                            <a href="contact">Liên hệ</a>
-                        </li>
-                        <li>
-                            <a href="about">About</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-7 col-lg-2 d-none d-sm-block text-end">
-                <div class="header-action-area">
-                    <ul class="header-action">
-                        <li class="navs-menu">
-                            <a class="action-item">
-                                <i class="zmdi zmdi-search icon"></i>
-                            </a>
+						</li>
+						<li>
+							<a href="contact">Liên hệ</a>
+						</li>
+						<li>
+							<a href="about">About</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-sm-7 col-lg-2 d-none d-sm-block text-end">
+				<div class="header-action-area">
+					<ul class="header-action">
+						<li class="navs-menu">
+							<a class="action-item">
+								<i class="zmdi zmdi-search icon"></i>
+							</a>
+							<ul class="navs-dropdown">
+								<li class="account">
+									<div class="search-form-wrap">
+										<div class="search-form">
+											<form action="#">
+												<div class="form-group">
+													<input class="form-control" type="search" placeholder="Search our store">
+													<button class="btn-search">Search</button>
+												</div>
+											</form>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</li>
+						<th:block th:if="${#request.remoteUser}">
+							<li class="search-item">
+								<a class="action-item" href="favorites">
+									<i class="zmdi zmdi-favorite-outline icon"></i>
+								</a>
+							</li>
+						</th:block>
 
-                            <ul class="navs-dropdown">
-                                <li class="account">
-                                    <div class="search-form-wrap">
-                                        <div class="search-form">
-                                            <form action="#">
-                                                <div class="form-group">
-                                                    <input class="form-control" type="search"
-                                                           placeholder="Search our store">
-                                                    <button class="btn-search">Search</button>
-                                                </div>
-                                            </form>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
-                        <th:block th:if="${#request.remoteUser}">
-                            <li class="search-item">
-                                <a class="action-item" href="favorites">
-                                    <i class="zmdi zmdi-favorite-outline icon"></i>
-                                </a>
-                            </li>
-                        </th:block>
-                        <li class="mini-cart">
-                            <a class="action-item">
-                                <i class="zmdi zmdi-shopping-cart-plus icon"></i>
-                                <span class="cart-quantity">{{cart.count}}</span>
-                            </a>
-                            <div class="mini-cart-dropdown">
-                                <div class="cart-item" ng-repeat="item in cart.items">
-                                    <div class="thumb">
-                                        <img class="w-100" src="assets/images/{{item.sanPham.image[0].ma}}">
-                                    </div>
-                                    <div class="content">
-                                        <h5 class="title">{{item.sanPham.ten}}</h5>
-                                        <span class="product-quantity">x{{item.qty}}</span>
-                                        <span class="product-price">${{item.giaBan | number:2}}</span>
-                                        <a class="cart-trash" ng-click="cart.remove(item.id)">
-                                            <i class="fa fa-trash"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                                <div class="cart-total-money">
-                                    <h5>
-                                        Tổng:
-                                        <span class="money">${{cart.amount | number:2}}</span>
-                                    </h5>
-                                </div>
-                                <div class="cart-btn">
-                                    <a th:href="@{/cart/view}">Xem giỏ hàng</a>
-                                    <a th:href="@{/cart/checkout}">Checkout</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="navs-menu">
-                            <a class="action-item">
-                                <i class="zmdi zmdi-lock-outline icon"></i>
-                            </a>
-                            <ul class="navs-dropdown">
-                                <li class="account">
-                                    <ul>
-                                        <th:block th:unless="${#request.remoteUser}">
-                                            <li>
-                                                <a th:href="@{/auth/login/form}">Đăng nhập</a>
-                                            </li>
-                                            <li>
-                                                <a th:href="@{/auth/register}">Đăng ký</a>
-                                            </li>
-                                            <li>
-                                                <a th:href="@{/auth/forgot-password}">Quên mật khẩu?</a>
-                                            </li>
-                                        </th:block>
-                                        <th:block th:if="${#request.remoteUser}">
-                                            <li th:if="${#request.isUserInRole('Dire') or #request.isUserInRole('STAF')}">
-                                                <a th:href="@{/admin}">Adminstrator</a>
-                                            </li>
-                                            <li>
-                                                <a th:href="@{/admin}" name="username"
-                                                   th:text="${#request.remoteUser}"></a>
-                                            </li>
-                                            <li>
-                                                <a th:href="@{/order/list}">Giỏ hàng</a>
-                                            </li>
-                                            <li>
-                                                <a th:href="@{/auth/change-password}">Đổi mật khẩu</a>
-                                            </li>
-                                            <li>
-                                                <a th:href="@{/auth/change-info}">Thông tin tài khoản</a>
-                                            </li>
-                                            <li>
-                                                <a th:href="@{/auth/logout}">Đăng xuất</a>
-                                            </li>
-                                        </th:block>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-6 col-sm-1 d-block d-lg-none text-end">
-                <button class="btn-menu" type="button">
-                    <i class="zmdi zmdi-menu"></i>
-                </button>
-
-            </div>
-        </div>
-    </div>
+						<li class="mini-cart">
+							<a class="action-item">
+								<i class="zmdi zmdi-shopping-cart-plus icon"></i>
+								<span class="cart-quantity">{{getProductCount()}}</span>
+							</a>
+							<div class="mini-cart-dropdown">
+								<div class="cart-item" ng-repeat="item in cartItems">
+									<div class="thumb">
+										<img class="w-100" src="assets/images/{{item.chiTietSanPham.sanPham.image[0].ma}}">
+									</div>
+									<div class="content">
+										<h5 class="title">{{item.chiTietSanPham.sanPham.ten}}</h5>
+										<span class="product-quantity">x{{item.soLuong}}</span>
+										<span class="product-price">{{item.donGia | number:2}}</span>
+										<a class="cart-trash" href="javascript:void(0);" ng-click="removeItem(item.id)">
+											<i class="fa fa-trash"></i>
+										</a>
+									</div>
+								</div>
+								<div class="cart-total-money">
+									<h5>
+										Tổng:
+										<span class="money">${{getTotalMoney()}}</span>
+									</h5>
+								</div>
+								<div class="cart-btn">
+									<a th:href="@{/cart/view}">Xem giỏ hàng</a>
+									<a th:href="@{/cart/checkout}">Checkout</a>
+								</div>
+							</div>
+						</li>
+						<li class="navs-menu">
+							<a class="action-item">
+								<i class="zmdi zmdi-lock-outline icon"></i>
+							</a>
+							<ul class="navs-dropdown">
+								<li class="account">
+									<ul>
+										<th:block th:unless="${#request.remoteUser}">
+											<li>
+												<a th:href="@{/auth/login/form}">Đăng nhập</a>
+											</li>
+											<li>
+												<a th:href="@{/auth/register}">Đăng ký</a>
+											</li>
+											<li>
+												<a th:href="@{/auth/forgot-password}">Quên mật khẩu?</a>
+											</li>
+										</th:block>
+										<th:block th:if="${#request.remoteUser}">
+											<li th:if="${#request.isUserInRole('Dire') or #request.isUserInRole('STAF')}">
+												<a th:href="@{/admin}">Adminstrator</a>
+											</li>
+											<li>
+												<a th:href="@{/order/list}">Giỏ hàng</a>
+											</li>
+											<li>
+												<a th:href="@{/auth/change-password}">Đổi mật khẩu</a>
+											</li>
+											<li >
+												<a th:href="@{/auth/change-info}" th:text="'Thông tin tài khoản' + '('+ ${#request.remoteUser} + ')'"></a>
+											</li>
+											<li>
+												<a th:href="@{/auth/logout}">Đăng xuất</a>
+											</li>
+										</th:block>
+									</ul>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-6 col-sm-1 d-block d-lg-none text-end">
+				<button class="btn-menu" type="button">
+					<i class="zmdi zmdi-menu"></i>
+				</button>
+			</div>
+		</div>
+	</div>
 </header>
