--- a/src/main/resources/templates/order/detail.html
+++ b/src/main/resources/templates/order/detail.html
@@ -41,11 +41,10 @@
 						</div>
 						<div class="form-group col-sm-12 mb-3">
 							<label class="form-label">Địa chỉ mua hàng:</label>
-							<div>
-								<div th:text="*{thanhPho}" class="form-control" readonly></div>
-								<div th:text="*{quan}" class="form-control" readonly></div>
-								<div th:text="*{dcChiTiet}" class="form-control" readonly></div>
-							</div>
+
+								<div th:text="*{tinh + ', ' + huyen + ', ' + xa + ', ' + dcChiTiet}"
+									 class="form-control" readonly></div>
+
 
 						</div>
 					</div>
@@ -65,7 +64,7 @@
 											<th>Gía</th>
 											<th>Số lượng</th>
 											<th>Tổng tiền</th>
-											<th>Trạng thái</th>
+
 										</tr>
 									</thead>
 									<tbody>
@@ -75,7 +74,7 @@
 											<td class="align-middle price">$[[*{#numbers.formatDecimal(donGia,0,'COMMA',2,'POINT')}]]</td>
 											<td class="align-middle">[[*{soLuong}]]</td>
 											<td class="align-middle price">$[[*{#numbers.formatDecimal(donGia*soLuong,0,'COMMA',2,'POINT')}]]</td>
-											<td class="align-middle price" > Chờ xác nhận</td>
+
 										</tr>
 									</tbody>
 								</table>
