--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -42,22 +42,42 @@
 											<th class="text-center">Phí ship</th>
 											<th class="text-center">Tổng tiền</th>
 											<th class="text-center">Trạng thái</th>
+
 											<th class="text-center">#</th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr th:each="order,state : *{orders}">
-											<td class="align-middle">[[${state.index}]]</td>
+											<td class="align-middle">[[${state.index+1}]]</td>
 											<td class="align-middle">[[${order.id}]]</td>
 											<td class="align-middle">[[${order.account.username}]]</td>
-											<td class="align-middle">[[${order.ngayDatHang}]]</td>
-											<td class="align-middle">[[${order.thanhPho}]],[[${order.quan}]],[[${order.dcChiTiet}]]</td>
-											<td class="align-middle">[[${order.soDienThoai}]]</td>
-											<td class="align-middle">[[${order.tienGiam}]]</td>
-											<td class="align-middle">[[${order.phiGiaoHang}]]</td>
-											<td class="align-middle">[[${order.tongTien}]]</td>
-											<td class="align-middle">[[${order.trangThai}]]</td>
+
 											<td class="align-middle">
+											[[${order.ngayDatHang}]]
+											</td>
+											<td class="align-middle">[[${order.dcChiTiet}]]</td>
+											<td class="align-middle">[[${order.soDienThoai}]]</td>
+											<td class="align-middle">
+												<span th:text="${#numbers.formatDecimal(order.tienGiam,0,'COMMA',0,'POINT')}"></span>
+											</td>
+											<td class="align-middle">
+												<span th:text="${#numbers.formatDecimal(order.phiGiaoHang,0,'COMMA',0,'POINT')}"></span>
+											</td><td class="align-middle">
+											<span th:text="${#numbers.formatDecimal(order.tongTien,0,'COMMA',0,'POINT')}"></span>
+										</td>
+											<td class="align-middle">
+												<span th:switch="${order.trangThai}">
+													<span th:case="0">Chờ xác nhận</span>
+     												<span th:case="1">Đã xác nhận</span>
+     												<span th:case="2">Đã hủy</span>
+   												</span>
+											</td>
+
+											<th class="align-middle">
+												<a class="link-danger" th:if="${order.trangThai == 0}" th:href="@{|/order/cancel/${order.id}|}">x</a>
+
+
+
 												<a th:href="@{|/order/detail/${order.id}|}" class="btn btn-sm btn-default border-0"
 													title="View your Order Details">
 													<i class="fa fa-eye"></i>
