--- a/src/main/resources/templates/sanpham.html
+++ b/src/main/resources/templates/sanpham.html
@@ -143,7 +143,7 @@
                                                                 <i class="zmdi zmdi-favorite-outline zmdi-hc-fw icon"></i>
                                                             </a>
                                                             <a class="add-cart" th:href="@{|/product/detail/${p.id}|}"
-                                                               th:attr="ng-click=@{|cart.add(${p.id})|}">
+                                                               th:attr="ng-click=@{|addtoCart(${p.id})|}">
                                                                 <i class="zmdi zmdi-shopping-cart-plus icon"></i>
                                                             </a>
                                                         </div>
