--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -56,7 +56,8 @@
 								<div class="product-item">
 									<div class="inner-content">
 										<div class="product-thumb">
-											<a th:href="@{|/product/detail/${p.id}|}">
+											<a th:href="@{|/product/detail/${p.sanPham.ma}|}"
+											ng-click="searchDetail()">
 												<img class="product-item m-auto d-block" th:src="@{|/assets/images/${p.sanPham.getImage().get(0).ma}|}"
 													 th:title="${p.sanPham.ten}">
 											</a>
@@ -75,8 +76,8 @@
 													   th:attr="ng-click='addFavorite(\'' + ${p.sanPham.ma} + '\', user1)'">
 														<i class="zmdi zmdi-favorite-outline zmdi-hc-fw icon"></i>
 													</a>
-													<a class="add-cart" th:href="@{|/product/detail/${p.id}|}"
-													   th:attr="ng-click=@{|cart.add(${p.id})|}">
+
+													<a class="add-cart" th:href="@{|/product/detail/${p.sanPham.ma}|}">
 														<i class="zmdi zmdi-shopping-cart-plus icon"></i>
 													</a>
 												</div>
@@ -85,7 +86,7 @@
 										<div class="product-desc">
 											<div class="product-info">
 												<h4 class="title">
-													<a th:href="@{|/product/detail/${p.id}|}">[(${p.sanPham.ten})]</a>
+													<a th:href="@{|/product/detail/${p.sanPham.ma}|}" ng-click="searchDetail()">[(${p.sanPham.ten})]</a>
 												</h4>
 
 											</div>
