--- a/src/main/resources/templates/order/detail.html
+++ b/src/main/resources/templates/order/detail.html
@@ -68,13 +68,12 @@
 										</tr>
 									</thead>
 									<tbody>
-										<tr th:each="detail:*{chiTietDonHangList}" th:object="${detail}">
+										<tr th:each="detail:*{chiTietDonHangList}">
 											<td class="align-middle price">[[*{chiTietSanPham.sanPham.ma}]]</td>
 											<td class="align-middle text-start">[[*{chiTietSanPham.sanPham.ma}]]</td>
 											<td class="align-middle price">$[[*{#numbers.formatDecimal(donGia,0,'COMMA',2,'POINT')}]]</td>
 											<td class="align-middle">[[*{soLuong}]]</td>
 											<td class="align-middle price">$[[*{#numbers.formatDecimal(donGia*soLuong,0,'COMMA',2,'POINT')}]]</td>
-
 										</tr>
 									</tbody>
 								</table>
