--- a/src/main/resources/templates/product/detail.html
+++ b/src/main/resources/templates/product/detail.html
@@ -8,7 +8,7 @@
 </style>
 
 <body>
-	<main class="main-content" th:object="${item}">
+		<main class="main-content" th:object="${item}" ng-init="searchDetail()">
 		<div class="page-header-area">
 			<div class="container">
 				<div class="row">
@@ -67,10 +67,13 @@
 
 								<div class="col-lg-6">
 									<div class="product-single-info">
+
+
 										<h4 class="title">[[*{SanPham.ten}]]</h4>
-										<div class="prices">[[*{ThuongHieu.name}]] <p class="text-success">Số lượng: [[*{soLuong}]]</p> </div>
+										<div class="prices">[[*{ThuongHieu.name}]] <p class="text-success">Số lượng:
+											{{p.soLuong}}</p> </div>
 										<div class="prices">
-											<span class="price">$[[*{#numbers.formatDecimal(GiaBan,0,'COMMA',2,'POINT')}]]</span>
+											<span class="price">$ {{ p.giaBan | number:2 }}</span>
 										</div>
 										<div class="prices">Tag: [[*{CoAo.name}]], [[*{LoaiKhachHang.name}]]</div>
 
@@ -82,22 +85,23 @@
 										</div>
 
 										<div class="form-group">
-											<select class="form-control" name="color" id="color">
-												<option th:each="color : ${m}" th:value="${color.code}" th:text="${color.name}"
-														th:selected="${item.getMauSac().getCode() == color.code}"></option>
+											<select class="form-control" name="color" id="color" ng-model="selectedMauSac" ng-change="searchDetail()">
+												<option value="" selected>Chọn màu</option>
+												<option th:each="color : ${m}" th:value="${color.code}" th:text="${color.name}" ng-selected="color.code === p.mauSac.code"></option>
 											</select>
+
 										</div>
 										<div class="row">
-										<div class="col-md-12">
-											<div class="btn-group" data-toggle="buttons">
-												<label class="btn btn-light" th:each="size : ${kc}">
-													<input type="radio" name="size" th:value="${size.code}" th:id="${'size' + size.code}"
-														   th:checked="${item.kichCo.code == size.code}" /> <!-- Kiểm tra điều kiện và chọn nếu đúng -->
-													<span th:text="${size.name}"></span>
-												</label>
+											<div class="col-md-12">
+												<div class="btn-group" data-toggle="buttons">
+													<label class="btn btn-light" th:each="size : ${kc}">
+														<input type="radio" name="size" th:value="${size.code}" ng-model="selectedKichCo" ng-change="searchDetail()" th:id="${'size' + size.code}"/>
+														<span th:text="${size.name}"></span>
+													</label>
+												</div>
 											</div>
 										</div>
-									</div>
+
 
 
 										<div class="product-action-simple">
@@ -105,7 +109,7 @@
 												<a href="javascript:(0);" class="btn-wishlist">Thêm vào yêu thích</a>
 											</div>
 											<div class="payment-button">
-												<a th:attr="ng-click=@{|addToCart(${id})|}" th:href="@{/cart/view}" class="btn-payment">Thêm vào giỏ</a>
+												<a th:attr="ng-click=@{|addToCart(p.id)|}" th:href="@{/cart/view}" class="btn-payment">Thêm vào giỏ</a>
 											</div>
 											<div class="social-sharing">
 												<span>Share:</span>
